--- a/automatyzacja_pogoda.yaml
+++ b/automatyzacja_pogoda.yaml
@@ -1,7 +1,7 @@
-alias: ESP E-ink - Aktualizuj prognozę pogody - wundeground
+alias: ESP E-ink - Dynamiczna prognoza pogody (co 2h) - FINAL
 description: >-
-  Pobiera godzinową prognozę pogody. Jeśli prognoza na daną godzinę minęła,
-  używa aktualnego stanu pogody.
+  Pobiera godzinową prognozę i wyświetla co 2. przyszłą prognozę. Finalna
+  działająca wersja.
 triggers:
   - minutes: /30
     trigger: time_pattern
@@ -23,77 +23,51 @@ actions:
       current_condition: "{{ states('weather.home') }}"
       current_temp: "{{ state_attr('weather.home', 'temperature') }}"
   - variables:
-      forecast_12: >
-        {% set target_time = today_at('12:00') | as_timestamp | 
-                             timestamp_custom('%Y-%m-%dT%H:%M:00', false) + 'Z' %}
-        {% set matches = raw_data | selectattr('datetime', 'eq', target_time) |
-        list %}
-
-        {% if matches | length > 0 %}
-          {{ matches[0].condition }}|{{ matches[0].temperature }}
+      slot_1_data: |
+        {% if raw_data | length > 1 %}
+          {% set f = raw_data[1] %}
+          {% set dt = f.datetime | as_datetime %}
+          {{ dt.astimezone().strftime('%H:00') }}|{{ f.condition }}|{{ f.temperature }}
         {% else %}
-          {# Jeśli brak prognozy (godzina minęła), użyj aktualnej pogody #}
-          {% if now() >= today_at('12:00') %}
-            {{ current_condition }}|{{ current_temp }}
-          {% else %}
-            unknown|0
-          {% endif %}
+          {{ (now() + timedelta(hours=2)).strftime('%H:00') }}|{{ current_condition }}|{{ current_temp }}
         {% endif %}
-      forecast_16: >
-        {% set target_time = today_at('16:00') | as_timestamp | 
-                             timestamp_custom('%Y-%m-%dT%H:%M:00', false) + 'Z' %}
-        {% set matches = raw_data | selectattr('datetime', 'eq', target_time) |
-        list %}
-
-        {% if matches | length > 0 %}
-          {{ matches[0].condition }}|{{ matches[0].temperature }}
+      slot_2_data: |
+        {% if raw_data | length > 3 %}
+          {% set f = raw_data[3] %}
+          {% set dt = f.datetime | as_datetime %}
+          {{ dt.astimezone().strftime('%H:00') }}|{{ f.condition }}|{{ f.temperature }}
         {% else %}
-          {% if now() >= today_at('16:00') %}
-            {{ current_condition }}|{{ current_temp }}
-          {% else %}
-            unknown|0
-          {% endif %}
+          {{ (now() + timedelta(hours=4)).strftime('%H:00') }}|{{ current_condition }}|{{ current_temp }}
         {% endif %}
-      forecast_20: >
-        {% set target_time = today_at('20:00') | as_timestamp | 
-                             timestamp_custom('%Y-%m-%dT%H:%M:00', false) + 'Z' %}
-        {% set matches = raw_data | selectattr('datetime', 'eq', target_time) |
-        list %}
-
-        {% if matches | length > 0 %}
-          {{ matches[0].condition }}|{{ matches[0].temperature }}
+      slot_3_data: |
+        {% if raw_data | length > 5 %}
+          {% set f = raw_data[5] %}
+          {% set dt = f.datetime | as_datetime %}
+          {{ dt.astimezone().strftime('%H:00') }}|{{ f.condition }}|{{ f.temperature }}
         {% else %}
-          {% if now() >= today_at('20:00') %}
-            {{ current_condition }}|{{ current_temp }}
-          {% else %}
-            unknown|0
-          {% endif %}
+          {{ (now() + timedelta(hours=6)).strftime('%H:00') }}|{{ current_condition }}|{{ current_temp }}
         {% endif %}
       precipitation_2h: >
-        {% set now_ts = now().timestamp() %} {% set forecast_2h = raw_data 
-          | selectattr('datetime', 'defined')
-          | map(attribute='datetime')
-          | map('as_datetime')
-          | select('>', now())
-          | list %}
-        {% set total_precip = namespace(sum=0) %} {% for entry in raw_data if
+        {% set total_precip = namespace(sum=0) %} {% set now_ts =
+        now().timestamp() %} {% set limit_ts = (now() +
+        timedelta(hours=2)).timestamp() %} {% for entry in raw_data if
         entry.datetime is defined %}
-          {% set entry_time = entry.datetime | as_datetime %}
-          {% if entry_time > now() and entry_time <= now() + timedelta(hours=2) %}
+          {% set entry_ts = (entry.datetime | as_datetime).timestamp() %}
+          {% if entry_ts > now_ts and entry_ts <= limit_ts %}
             {% set total_precip.sum = total_precip.sum + (entry.precipitation | float(0)) %}
           {% endif %}
         {% endfor %} {{ "%.1f" | format(total_precip.sum) }}
   - data:
       entity_id: input_text.eink_forecast_12_wu
-      value: "{{ forecast_12 }}"
+      value: "{{ slot_1_data }}"
     action: input_text.set_value
   - data:
       entity_id: input_text.eink_forecast_16_wu
-      value: "{{ forecast_16 }}"
+      value: "{{ slot_2_data }}"
     action: input_text.set_value
   - data:
       entity_id: input_text.eink_forecast_20_wu
-      value: "{{ forecast_20 }}"
+      value: "{{ slot_3_data }}"
     action: input_text.set_value
   - data:
       entity_id: input_text.eink_precipitation_forecast
