--- a/esphome-esp32c6-ramka.yaml
+++ b/esphome-esp32c6-ramka.yaml
@@ -139,29 +139,42 @@ esphome:
                     - logger.log: "✓ Helper OFF - allowing deep sleep"
 
                     - lambda: |-
-                        ESP_LOGD("main", "Current time: %d:%02d",
-                          id(sntp_time).now().hour,
-                          id(sntp_time).now().minute);
+                        auto now = id(sntp_time).now();
+                        int current_hour = now.hour;
+                        int current_minute = now.minute;
+                        
+                        ESP_LOGD("main", "Current time: %d:%02d", current_hour, current_minute);
+                        
+                        // Oblicz godzinę po obudzeniu (60 min później)
+                        int wake_hour = current_hour + 1;
+                        if (wake_hour >= 24) wake_hour -= 24;
+                        
+                        ESP_LOGD("main", "Next wake time would be: %d:%02d", wake_hour, current_minute);
 
+                    - delay: 2s
+                    
+                    # Decyzja o czasie snu na podstawie PRZYSZŁEJ godziny
                     - if:
                         condition:
-                          lambda: 'return id(sntp_time).now().hour >= 22 || id(sntp_time).now().hour < 6;'
+                          # Sprawdzamy czy za godzinę będzie noc (21:00-5:00)
+                          lambda: |-
+                            int wake_hour = id(sntp_time).now().hour + 1;
+                            if (wake_hour >= 24) wake_hour -= 24;
+                            return (wake_hour >= 21 || wake_hour < 6);
                         then:
                           - logger.log:
-                              format: "🌙 Night detected (hour: %d) -> Deep sleep 8h"
-                              args: ['id(sntp_time).now().hour']
+                              format: "🌙 Next wake would be NIGHT (hour: %d) -> Deep sleep 8h"
+                              args: ['(id(sntp_time).now().hour + 1) % 24']
                               level: WARN
-                          - delay: 2s
                           - logger.log: "💤 Entering deep sleep..."
                           - deep_sleep.enter:
                               id: deep_sleep_component
                               sleep_duration: 8h
                         else:
                           - logger.log:
-                              format: "☀️ Day (hour: %d) -> Deep sleep 60min"
-                              args: ['id(sntp_time).now().hour']
+                              format: "☀️ Next wake would be DAY (hour: %d) -> Deep sleep 60min"
+                              args: ['(id(sntp_time).now().hour + 1) % 24']
                               level: WARN
-                          - delay: 2s
                           - logger.log: "💤 Entering deep sleep..."
                           - deep_sleep.enter:
                               id: deep_sleep_component
